# actor_model_demo

./: .gitignore  Cargo.toml  Readme.md
examples/basic-infection/: incidence_reporter.rs  infection_manager.rs  main.rs  message.rs  people.rs  transmission_manager.rs
src/: actor.rs  lib.rs  message.rs  rccell.rs  router.rs  timeline.rs
