[package]
name = "actor_model"
version = "0.1.0"
edition = "2024"

[dependencies]
ordered-float = "4.6.0"
rand = { version = "0.9.0-beta.1", features = ["small_rng"] }
rand_distr = "0.5.0-beta.2"
serde = { version = "1.0.216", features = ["derive"] }
csv = "1.3.1"

[features]
default = ["print_messages"]

print_messages = []
